# FFHEE

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/: mulfft.cuh  params.hpp  utils.cuh
playground/: CMakeLists.txt
playground/blindrotate/: CMakeLists.txt  cuparams.hpp  gatebootstrapping.cuh  main.cu  trgsw.cuh
playground/blindrotate/spculios/: FFTinit.cuh
playground/constantmemory/: CMakeLists.txt  a.out  constantmemory.cu  example.cu
playground/convolution/: CMakeLists.txt  main.cu
playground/convolution/mulfft/: FFTinit.cuh  TwistFFT.cuh  TwistIFFT.cuh  coroutines.cuh  mulfft.cuh
playground/externalproduct/: CMakeLists.txt  externalproduct.cuh  main.cu
playground/externalproduct/mulfft/: TwistIFFT.cuh  mulfft.cuh
playground/fft/: CMakeLists.txt  fft.cu  fftcpu.cpp  main.cu  spqlios++.hpp
playground/fft/mulfft/: TwistFFT.cuh  TwistIFFT.cuh  mulfft.cuh
playground/gatebootstrapping/: convolutioncpu.cpp  cuparams.hpp  gatebootstrapping.cuh  main.cu  trgsw.cuh
playground/gatebootstrapping/spculios/: FFTinit.cuh  TwistFFT.cuh  TwistIFFT.cuh  coroutines.cuh  spculios.cuh
playground/ifft/: CMakeLists.txt  ifft.cu  ifftcpu.cpp  params.hpp
playground/nand/: CMakeLists.txt  ffhee.cu  ffhee.cuh  gatebootstrapping.cuh  utils.hpp
playground/nand/spculios/: TwistFFT.cuh
playground/pagelock/: CMakeLists.txt  cuparams.hpp  pagelock.cu
src/: CMakeLists.txt
test/: CMakeLists.txt
test/mulfft/: CMakeLists.txt  mulfft.cu
